Made lists for later use in "for loops"

--- a/R/chem313_ICPMSAnalysis.Rmd
+++ b/R/chem313_ICPMSAnalysis.Rmd
@@ -14,12 +14,19 @@ knitr::opts_chunk$set(echo = TRUE)
 library(readr)
 library(tidyverse)
 
+#Make sure to import ICPMS_tidy_example first
+
 
 ```
 
 ```{r}
 
+sample_sites <- unique(filter(ICPMS_tidy_example, site!="MB", site!="")$site)
+  #excludes method blank and quality control 
+metals_analyzed <- unique(ICPMS_tidy_example$metal)
 
+sample_sites
+metals_analyzed
 
 ```
 
