--- a/R/chem313_ICPMSAnalysis.Rmd
+++ b/R/chem313_ICPMSAnalysis.Rmd
@@ -32,6 +32,9 @@ metals_analyzed
 
 ```{r}
 
+#making calibration curve for each metal
+#ICPMS_cal is data frame for info from calibration curve equations
+
 ICPMS_cal <- NULL
 for(unique_metal in metals_analyzed){
   cal <- ICPMS_tidy_example %>%
@@ -63,6 +66,70 @@ ICPMS_cal
 
 remove(equation, cal, slope, slope_std, intercept, intercept_std, w, model, unique_metal)
 
+
+```
+
+```{r}
+#created function for analyzing samples
+
+#inputs: unique_site (as a character, ex. "A")
+#outputs: concentration vector
+
+sample_analysis <- function(unique_site){
+  concentration_data <- NULL
+  for(unique_metal in metals_analyzed){
+    sample <- filter(ICPMS_tidy_example, metals == unique_metal, site == unique_site)
+    data <- NULL
+    
+    for(ID in sample$sample_key){
+      sample_data <- filter(sample, sample_key == ID)
+      cal <- filter(ICPMS_cal, metal == unique_metal)
+      
+      #Sample Analysis
+      m <- cal$slope
+      b <- cal$intercept
+      y <- sample_data$cps
+      
+      b_e <- cal$intercept_std
+      m_e <- cal$slope_std
+      
+      x <- (y-b)/m
+      #units now kg/ml, based on calibration stadnards
+      
+      RSD <- sample_data$rsd
+      CPS <- sample_data$cps
+      
+      #error propagation 
+      e_yb <- sqrt((RSD)^2 + (b_e)^2)
+      #error in y-b from the calibration
+      yb <- CPS-b
+      e_x <- x*sqrt((e_yb/yb)^2 + (m_e/m)^2)
+      #error in x from the calibration
+      
+      data <- rbind(data, data_frame(sample_key = ID, x, e_x))
+      if(unique_site !="MB"){
+        concentration_data <- data_frame(sample_key = sample_data$sample_key,
+                                         analyst = sample_data$analyst,
+                                         metal = unique_metal,
+                                         site = unique_site,
+                                         conc_dil = x,
+                                         conc_dil_error = e_x) %>%
+          rbind(concentration_data)
+      }
+    }
+    if(unique_site == "MB"){
+      x <- mean(data$x)
+      e_x <- sd(data$x)
+      concentration_data <- data_frame(metal = unique_metal,
+                                       site = unique_site,
+                                       conc_dil = x,
+                                       conc_dil_error = e_x) %>%
+        rbind(concentration_data)
+                              
+    }
+  }
+  return(concentration_data)
+}
 
 ```
 
