--- a/R/chem313_ICPMSAnalysis.Rmd
+++ b/R/chem313_ICPMSAnalysis.Rmd
@@ -168,6 +168,37 @@ uncor_sample
 
 ```
 
+```{r}
+
+#correct for the method blank and error propagation
+
+sample_data_mb <- NULL
+
+for(unique_metal in metals_analyzed){
+  MB_metal <- filter(MB, metal==unique_metal)
+  sample_metal <- filter(uncor_sample, metal == unique_metal)
+  conc_dil_blanked <- sample_metal$conc_dil-MB_metal$conc_dil
+  
+  #error propagation: subtraction of MB
+  conc_dil_blanked_error <- sqrt((sample_metal$conc_dil_error)^2 +
+                                   (MB_metal$conc_dil_error)^2)
+  
+  sample_data_mb <- sample_metal %>%
+    mutate(conc_dil_blanked, conc_dil_blanked_error) %>%
+    rbind(sample_data_mb)
+}
+
+sample_data_mb
+
+##side note: sample procedure for what they did in lab with the soil is on slide 22 of ICPMS Data Analysis Code ppt
+
+```
+
+
+
+
+
+
 
 
 
